# demikernel

./: .gitattributes  .gitignore  .gitmodules  API.md  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE.md  PktMon.cap  PktMon.etl  README.md  SECURITY.md  SUPPORT.md  TODOs.md  azure-pipelines.yml  calibrate.sh  config.yaml  datacenter-os.key  demeter.md  linux.mk  log1  notes.org  run_server.sh  rust-toolchain  rustfmt.toml  setenv.bat  setenv.ps1  tcp_client.mk  tcp_server.mk  udp_client.mk  udp_server.mk  windows.mk
apps/: CMakeLists.txt  redis.conf
apps/echo/: .gitignore  CMakeLists.txt  common.hh  config.yaml  dmtr_tcp_client.cc  dmtr_tcp_server.cc  dmtr_udp_client.cc  dmtr_udp_server.cc  dpdk_common.cpp  dpdk_common.h  dpdk_udp_echo_client.cpp  dpdk_udp_echo_server.cpp  mtcp_echo_client.cpp  posix_echo_client.cc  posix_tcp_client.cc  posix_tcp_server.cc  tcp_client.cc  tcp_cmdline_server.cc  tcp_server.cc  udp_client.cc  udp_server.cc
apps/echo/makefiles/: tcp_client_rdma.mk  tcp_server_mtcp.mk  tcp_server_orig_mtcp.mk  tcp_server_posix.mk  tcp_server_raw_mtcp.mk  udp_client_raw_dpdk.mk  udp_server_lwip.mk
apps/redis/: CMakeLists.txt
apps/redis/posix/: CMakeLists.txt
dpdk-rs/: Cargo.toml  build.rs  inlined.c  rust-toolchain  rustfmt.toml  wrapper.h
dpdk-rs/src/: lib.rs
dpdk_bindings/: Cargo.toml  LICENSE.txt  README.md  build.rs  rustfmt.toml  wrapper.h
dpdk_bindings/src/: lib.rs
libos/: CMakeLists.txt
libos/common/: CMakeLists.txt  assert.h  basic-queue.cc  basic-queue.h  basic_queue.cc  basic_queue.hh  c_interface.cc  cast.c  fail.c  hash.h  io_queue.cc  io_queue.hh  io_queue_api.cc  io_queue_api.hh  io_queue_factory.cc  io_queue_factory.hh  latency.cc  latency.h  library.cc  library.h  library.hpp  measure.h  mem.c  mem.h  memory_queue.cc  memory_queue.hh  message.cc  message.h  queue.cc  queue.h  raii_guard.cc  rdmacm_router.cc  rdmacm_router.hh  rdtsc.h  sga.c  time_resolution.cc  wait.c  wait.cc
libos/liblwip/: CMakeLists.txt  lwip-queue.cc  lwip-queue.h  lwip-queue.hh  lwip.cc
libos/libmtcp/: CMakeLists.txt  mtcp-queue.cc  mtcp-queue.h  mtcp.cc  mtcp_measure.h  setup_mtcp.sh
libos/libposix/: CMakeLists.txt  posix-queue.cc  posix-queue.h  posix-queue_c.cc  posix.cc  posix_libos.cc
libos/librdma/: CMakeLists.txt  rdma-queue.cc  rdma-queue.h  rdma.cc  rdma_libos.cc  rdma_queue.cc  rdma_queue.hh
libos/librdma/mem/: GNUmakefile
libos/libspdk/: .gitignore  CMakeLists.txt  setup_spdk.sh  spdk-queue.cc  spdk-queue.h  spdk.cc
libos/lwip/: CMakeLists.txt  lwip_libos.cc  lwip_queue.cc  lwip_queue.hh
libos/memhoard/: GNUmakefile
libos/memhoard/include/: rdmaheap.cc
libos/posix/: CMakeLists.txt  posix-queue.h  posix_libos.cc  posix_queue.cc  posix_queue.hh
libos/rdma/: CMakeLists.txt  rdma-queue.cc  rdma_libos.cc  rdma_queue.cc  rdma_queue.hh
libos/rdmacm-common/: CMakeLists.txt  rdmacm_router.cc  rdmacm_router.hh
liburing-rs/: Cargo.toml  build.rs  inlined.c  rust-toolchain  wrapper.h
liburing-rs/src/: lib.rs
nettest/: Cargo.toml  README.md
nettest/input/: accept-blocking.pkt  accept-refuse-1.pkt  accept-refuse-2.pkt  accept-refuse-3.pkt  accept-refuse-4.pkt  accept-refuse-5.pkt  accept-refuse-6.pkt  blocking-accept.pkt  blocking-connect.pkt  blocking-read.pkt  blocking-write.pkt  connect-blocking.pkt  connect-early-reset.pkt  connect-timeout.pkt  local-close.pkt  pop-blocking.pkt  pop-push-blocking.pkt  push-blocking.pkt  remote-close.pkt
nettest/src/: glue.rs  grammar.y  lib.rs  main.rs  tokens.l
nettest/staging-input/: push-pop-blocking.pkt
network_simulator/: Cargo.toml  README.md  build.rs
network_simulator/src/: glue.rs  grammar.y  main.rs  tokens.l
src/: CMakeLists.txt  Cargo.toml  demikernel.code-workspace  epoll.h  glue.c  hashtable.c  init.c  interpose.c  lib.rs  log.c  log.h  qman.h  queue.c  rust-toolchain  rustfmt.toml  utils.h
src/c++/: CMakeLists.txt  config.yaml
src/c++/time/: time.cc  (+1 more)
src/catcollar/: iouring.rs  mod.rs
src/catnap/: mod.rs  runtime.rs
src/catnap-libos/: Cargo.toml
src/catnip/: dpdk.rs  interop.rs  mod.rs  runtime.rs
src/catnip-libos/: Cargo.toml
src/catnip_libos/: Cargo.toml
src/catpowder/: interop.rs  mod.rs  socket.rs
src/cs/: .editorconfig  Build.csproj  D.build.props  Demikernel.sln  Demikernel.snk  Test.csproj  demikernel.cs  nuget.config  pack.cmd  pack.ps1  readme.md  version.json
src/ctrl/: accept.c  bind.c  close.c  connect.c  fnctl.c  getpeername.c  getsockname.c  getsockopt.c  listen.c  setsockopt.c  shutdown.c  socket.c
src/data/: recv.c  send.c
src/demikernel/: Cargo.toml  bindings.rs  config.rs  dbuf.rs  libos.rs  mod.rs
src/epoll/: epoll.c  epoll_create.c  epoll_ctl.c  epoll_wait.c
src/include/: io-queue.h
src/libos/: CMakeLists.txt
src/rdma/: CMakeLists.txt
src/rust/: .gitignore  CMakeLists.txt  Cargo.toml  TODO.md  _astylerc  lib.rs  rust-toolchain  rustfmt.toml
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  dpdk_common.cpp  mtcp_common.cpp  mtcp_common.h  mtcp_echo_server.cpp  network.rs  pingpong.rs  pushpop.rs  sga.rs  tcp_client.cc  tcp_client.mk  tcp_client_mtcp.mk  tcp_client_posix.mk  tcp_client_rdma.mk  tcp_server.cc  tcp_server.mk  tcp_server_mtcp.mk  tcp_server_posix.mk  tcp_server_rdma.mk  udp_client.cc  udp_client.mk  udp_client_lwip.mk  udp_client_posix.mk  udp_client_raw_dpdk.mk  udp_server.cc  udp_server.mk  udp_server_lwip.mk  udp_server_posix.mk  udp_server_raw_dpdk.mk  windows.mk
tests/c/: Makefile  linux.mk  sizes.c  syscalls.c  tcp-ping-pong.c  tcp-push-pop.c  udp-ping-pong.c  udp-push-pop.c  windows.mk
tests/common/: catcollar.rs  catnap.rs  catnip.rs  catpowder.rs  config.rs  mod.rs
tests/cs/: Makefile
tests/makefiles/: tcp_client_mtcp.mk  tcp_client_orig_mtcp.mk  tcp_client_raw_mtcp.mk  tcp_server_rdma.mk  udp_client_posix.mk
tests/rust/: pingpong.rs  pushpop.rs  sga.rs  tcp.rs  udp.rs
xdp-rs/: Cargo.toml  build.rs  generate.bat  inlined.c  wrapper.h
xdp-rs/src/: lib.rs  ring.rs
xdp_bindings/: Cargo.toml  README.md  build.rs  wrapper.h
xdp_bindings/src/: lib.rs
(+1481 files in other folders)
