# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.

[package]
name = "demikernel-network-simulator"
version = "0.1.0"
authors = ["Microsoft Corporation"]
edition = "2021"
description = "Network Testing Tool for Demikernel"
readme = "README.md"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/demikernel"
license-file = "LICENSE.txt"

[build-dependencies]
cfgrammar = "0.13.7"
lrlex = "0.13.7"
lrpar = "0.13.7"
anyhow = "1.0.86"
libc = "0.2.155"

[dependencies]
cfgrammar = "0.13.7"
lrlex = "0.13.7"
lrpar = "0.13.7"
anyhow = "1.0.86"
clap = "4.5.15"
libc = "0.2.155"

[[bin]]
doc = false
name = "network_simulator"
path = "src/main.rs"


[lib]
doc = false
name = "network_simulator"
path = "src/lib.rs"
